fix css on iphone vision

--- a/src/components/TodoInputs/TodoInputs.module.scss
+++ b/src/components/TodoInputs/TodoInputs.module.scss
@@ -19,6 +19,7 @@
 .title_input {  
     flex-grow: 1;
     padding: 10px 10px;  
+    background: #FFFFFF; 
 }
 .body_input {
     width: 100%;
